Alterado o nome do site em title

--- a/compra.html
+++ b/compra.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="css/compra.css">
   <link rel="shortcut icon" href="img/icone.png">
-  <title>Checkout</title>
+  <title>Agnello</title>
   
 </head>
 <body>
