--- a/doces.html
+++ b/doces.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="shortcut icon" href="img/icone.png" >
+    <link rel="shortcut icon" href="img/icone1.png" >
     <link rel="stylesheet" href="css/doces.css">
     
-    <title>Vinheria Agnello</title>
+    <title>Projeto Vinharia</title>
 </head>
 <body>
 
@@ -25,10 +25,8 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li class="dropdown">
-                    <a href="#">Vinhos</a>
+                    <a href="produtos.html">Vinhos</a>
                     <ul class="dropdown-content">
-                        
-                        <li><a href="produtos.html">Produtos</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
