--- a/compra.html
+++ b/compra.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="css/compra.css">
-  <link rel="shortcut icon" href="img/icone.png">
-  <title>Agnello</title>
+  <link rel="shortcut icon" href="img/icone1.png">
+  <title>Projeto Vinharia</title>
   
 </head>
 <body>
@@ -22,10 +22,8 @@
                 <a href="index.html">Home</a>
             </li>
             <li class="dropdown">
-                <a href="#">Vinhos</a>
+                <a href="produtos.html">Vinhos</a>
                 <ul class="dropdown-content">
-                    
-                    <li><a href="produtos.html">Produtos</a></li>
                 </ul>
             </li>
             <li class="dropdown">
