--- a/dados.html
+++ b/dados.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/dados.css">
-    <link rel="shortcut icon" href="img/icone.png" >
-    <title>Vinheria Agnello</title>
+    <link rel="shortcut icon" href="img/icone1.png" >
+    <title>Projeto Vinharia</title>
 </head>
 <body>
     <h1>DADOS RECEBIDOS COM SUCESSO!</h1>
