--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     
-    <link rel="shortcut icon" href="img/icone.png">
-    <title>Vinheria Agnello</title>
+    <link rel="shortcut icon" href="img/icone1.png">
+    <title>Projeto Vinharia</title>
 </head>
 <body>
 
@@ -25,10 +25,9 @@
                     <a href="#homer">Home</a>
                 </li>
                 <li class="dropdown">
-                    <a href="#">Vinhos</a>
+                    <a href="produtos.html">Vinhos</a>
                     <ul class="dropdown-content">
                         
-                        <li><a href="produtos.html">Produtos</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
