--- a/pagamento.html
+++ b/pagamento.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/pagamento.css">
-    <link rel="shortcut icon" href="img/icone.png">
-    <title>Vinheria Agnello</title>
+    <link rel="shortcut icon" href="img/icone1.png">
+    <title>Projeto Vinharia</title>
     
 </head>
 <body>
