Alterações no html

--- a/dados.html
+++ b/dados.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Incluindo o CSS personalizado -->
     <link rel="stylesheet" href="css/dados.css">
-    <link rel="shortcut icon" href="img/icone1.png" >
+    <!-- Ícone da guia -->
+    <link rel="shortcut icon" href="img/icone1.png">
     <title>Projeto Vinharia</title>
 </head>
 <body>
-    <h1>DADOS RECEBIDOS COM SUCESSO!</h1>
-    
-    
+    <!-- Informação da página de que os dados foram recebidos -->
+    <h1>Dados recebidos com sucesso!</h1>
 </body>
 </html>
